--- a/gui/public/settings.html
+++ b/gui/public/settings.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
+
+<!-- Version 0.5.4 -->
+
 <html lang="en">
 <head>
   <title>Settings - Box Farm</title>
   <meta charset="utf-8">
+  <meta name="description" content="Box Farm GUI">
+  <meta name="author" content="Control Subsystem">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Store dependencies locally instead. -->
